--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
