--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-phone-input": "^0.2.4",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
